LabasCode/kubernetes/03-ingress/6-default-ns-Ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ns-tls-nginx-ingress
  #annotations:
  #  kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - default-ns-https-example.foo.com
    secretName: default-ns-https-example.foo.com
  rules:
  - host: default-ns-https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nettool
            port:
              number: 80
